# rest-api-boilerplate

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  sql.sql  subscribers.csv  test_delay_fields.sh  test_emails.sh  test_optin_campaign.sh  webhook-server.js
.cargo/: config.toml
.sqlx/: query-0379a8964c1d9ca404803c09a0c0c89dcfe3606fbfdf00a094649b91b8ebbeb7.json  query-06d2993356833b8f7d0c647f093cadf200a593b37f794d148a2a4108d2d4a127.json  query-07ee5ac4cba6e3e0c0d5e0fd72e082567753b63a67ca622a74f2897e3fe81b85.json  query-0eabfbfa88c39c38c5d20891a57ce4857a635ff0c830b7191dddeeaf1768ec6c.json  query-122fa642080056d0a8b2d8e1cf2b9196769037d2878094518937cf23e3bbc821.json  query-12d1ea1990010f3b8253e4c191e9cc7ef47f2d1f0a6299efd3c6831ed0f5d086.json  query-13001546226b0f694dd7bd21af6deb33140f5f04deb2849365451d277d15f16c.json  query-14f384e210d34e3b7a2a7f1196a2ff164690ca629b11da1ae2a33ecbe3fe17ca.json  query-156df4639e990f910ed6ea6f19a08a317e21b70d044ff70acbbc8a2877a0abf3.json  query-194bf9b78a735320ba93717ec841a7acd65b76ab81910931a16b5fba9c430fb7.json  query-1de28e429eecf8c6612c2725dc6a04d1415b95d21ee4a791e4b58766b4f187d3.json  query-1e97308428f751b5529ab2a4ee9c6eddfcd1aa7e5a9ac7ff47a7c795292646a2.json  query-1eef220788c1c2c584e5ca430c777ec14dcbbf02ecab81382ccd99bbf8f64755.json  query-2029e82f91173c451a7385befa47fb509ad5fec82b83786c932955bdd95b55e4.json  query-2273f019fcb3a261dd9e19de35c3965c5c7c922df82814b6e7e7f50c9afaeb60.json  query-230f74357b7a8d446f65000d295abbb0d54ee6edf62340cf9dc38300fb0cb4df.json  query-26226ec9984de3bfa9dfb72414b1f5637e16a1ec7aca42b655f16affae15e076.json  query-266684b3a4cc371c668ce0b745af5f2a05cb77a98b6b9ab4c05092caafeb97b8.json  (+75 more)
diagrams/: main..dot
migrations/: 20250109114917_init.sql  (+10 more)
(+117 files in other folders)
